2014-12-24  Per Bothner  <per@bothner.com>

	* ObjectExp.java (compile): Use loadHeapFrame.

2014-12-22  Per Bothner  <per@bothner.com>

	* Declaration.java (PATTERN_NESTED, SKIP_FOR_METHOD_PARAMETER)
	IS_PARAMETER): New flags.
	(parameterForMethod): New method.
	(noteValueFromLet): Generalize to ScopeExp.

2014-12-21  Per Bothner  <per@bothner.com>

	* ScopeExp.java (getDefine): Remove unused parameter.

	* AccessExp.java (setBinding): Also (maybe) set symbol.
	* SetExp.java (<init>): Use setBinding.

	* ModuleInfo.java (setCompilation): Don't set sourceAbsPath if input
	port is a string or lexer, using logic previously in pushNewModule.
	* Compilation.java (pushNewModule): Simplify correspondingly.
	(getSourceAbsPath): New method.

2014-12-19  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (checkInlineable): Don't set inlineHome.
	(visitLambdaExp): Set inlineHome if it hasn't been.
	* FindTailCalls.java: Add documentation.

	* Compilation.java (pushNewModule): Merge overloaded versions.
	See ModuleInfo's sourceAbsPath to null if string or console.

2014-12-16  Per Bothner  <per@bothner.com>

	* Compilation.java (applyFunction) Moved from Translator.

	* ProcInitializer.java (emitLoadModuleMethod): For standard procedure
	property names, load from the corresponding pre-existing field.

	* InlineCalls.java (checkCast): On error, add an explicit coercion
	to void casading error messages.

2014-12-15  Per Bothner  <per@bothner.com>

	* Literal.java (Literal): Re-factor so constructors call each other.

2014-12-12  Per Bothner  <per@bothner.com>

	* ProcInitializer.java (emitLoadModuleMethod): Sometimes need
	to use loadHeapFrame.

2014-12-08  Per Bothner  <per@bothner.com>

	* StackTarget.java (forceLazy): New method.
	(forceLazyIfNeeded): Use forceLazy.

	* BlockExp.java (runFinallyBlocks): New field.
	(setRunFinallyBlocks): Set field.
	(compile): Use field.
	* FindTailCalls.java (visitExitExp): New method.