@@ -1,3 +1,7 @@
+2015-01-08  Per Bothner  <per@bothner.com>
+
+	* FindCapturedVars.java (checkInlineable): Move CANNOT_INLINE check.
+
 2014-12-24  Per Bothner  <per@bothner.com>
 
 	* ObjectExp.java (compile): Use loadHeapFrame.
